--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 	--light: #f4f4fd;
 	--modal-overlay: #2e2f42;
 	--hero-bg: #2e2f42b2;
-	--white: #fff;
+	--white: #ffffff;
 	--modal: #fcfcfc;
 }
 ul li {
@@ -29,31 +29,47 @@ button {
 body {
     font-family: "Roboto", sans-serif;
     line-height: 1.333;
-    color: var(--dark);
+    color: var(--text);
+    background: var(--white);
+}
+header {
+    background-color: var(--white);
 }
 .logo {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--dark);
-}
-.logo span {
     color: var(--primary);
 }
-nav ul li {
-    font-weight: 500;
+.logo .logo-part {
     color: var(--dark);
 }
-address li a,
+nav ul li a {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--dark);
+}
+address {
+    font-style: normal;
+}
+address li a {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
 p {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--text);
 }
-nav ul li:hover,
-address > a:hover {
+nav ul li a:hover,
+address ul li a:hover {
     color: var(--pressed);
 }
-nav ul li:active {
+header ul li a:active, header ul li a:focus {
     border-color: var(--pressed);
     border-bottom: 2px;
 }
@@ -64,29 +80,53 @@ nav ul li:active {
     box-shadow: 0px 4px 4px 0px #00000026;
     color: var(--white);
     border-radius: 4px;
-    background-color: var(--primary)
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: var(--primary);
 }
-.btn:hover {
+.btn:hover, .btn:focus {
+    cursor: pointer;
     background-color: var(--pressed);
+}
+section {
+    background-color: var(--white);
+}
+.solutions {
+    background-color: var(--dark);
 }
 h1 {
     font-size: 56px;
     font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--white);
 }
 h2 {
     font-size: 36px;
     font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 h3 {
     font-size: 20px;
     font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
-footer {
+.team {
+    background-color: var(--light);
+}
+.team ul li {
+    text-align: center;
+}
+.footer {
     background-color: var(--dark);
 }
-footer p {
+.footer .footer-text {
     color: var(--light);
 }
-footer .logo {
+.footer .logo .logo-part {
     color: var(--white);
 }
