--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 :root {
 	--primary: #4d5ae5;
 	--pressed: #404bbf;
@@ -56,28 +51,30 @@ nav ul li a {
 address {
     font-style: normal;
 }
-address li a {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-p {
+address ul li a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text);
 }
+p {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-size: 16px;
+    color: var(--text);
+}
 nav ul li a:hover,
-address ul li a:hover {
+address ul li a:hover,
+nav ul li a:focus,
+address ul li a:focus {
     color: var(--pressed);
 }
 header ul li a:active, header ul li a:focus {
     border-color: var(--pressed);
-    border-bottom: 2px;
 }
 .btn {
     width: 169px;
     height: 56px;
     font-weight: 500;
-    box-shadow: 0px 4px 4px 0px #00000026;
     color: var(--white);
     border-radius: 4px;
     line-height: 1.5;
@@ -107,13 +104,16 @@ h2 {
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
     text-transform: capitalize;
+    color: var(--dark);
 }
 h3 {
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: var(--dark);
 }
 .team {
     background-color: var(--light);
@@ -128,5 +128,5 @@ h3 {
     color: var(--light);
 }
 .footer .logo .logo-part {
-    color: var(--white);
+    color: var(--light);
 }
