--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ header ul li a:active, header ul li a:focus {
     height: 56px;
     font-weight: 500;
     color: var(--white);
-    border-radius: 4px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     background-color: var(--primary);
@@ -120,6 +119,7 @@ h3 {
 }
 .team ul li {
     text-align: center;
+    background-color: var(--white);
 }
 .footer {
     background-color: var(--dark);
