--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ ul li {
 a {
     text-decoration: none;
 }
+img {
+    display: block;
+}
 button {
     border: 0;
 }
@@ -32,12 +35,17 @@ body {
     color: var(--text);
     background: var(--white);
 }
-.header {
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header .header-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 24px 156px;
+    padding: 24px;
     border-bottom: 1px solid var(--accent);
     background-color: var(--white);
 }
@@ -45,19 +53,22 @@ body {
     display: flex;
     gap: 76px;
 }
+.header .header-list .logo {
+    margin-right: 76px;
+}
 .header .header-list ul {
     display: flex;
     gap: 40px;
-}
-.header .header-contacts {
-    display: block;
 }
 .header .header-contacts ul{
     display: flex;
     gap: 40px;
 }
 .wrapper .section {
-    padding: 120px 156px;
+    padding: 120px 0;
+}
+.visually-hidden {
+    display: none;
 }
 .wrapper .solutions {
     display: flex;
@@ -65,15 +76,18 @@ body {
     justify-content: center;
     align-items: center;
     gap: 48px;
+    padding: 188px 0;
 }
 .wrapper .solutions .solutions-title {
     margin-top: 69px;
     max-width: 496px;
 }
 .wrapper .solutions .btn {
-    padding: 16px 32px;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    cursor: pointer;
     border-radius: 4px;
-    margin-bottom: 69px;
 }
 .wrapper .skills ul {
     display: flex;
@@ -87,15 +101,20 @@ body {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    max-width: 264px;
 }
-.wrapper .skills h2 {
-    display: none;   
+.wrapper .skills ul li:first-child {
+    width: calc((100% - 72px) / 4);
+}
+.wrapper .skills ul li h3 {
+    margin-bottom: 8px;
 }
 .wrapper .team {
     display: flex;
     flex-direction: column;
     gap: 72px;
+}
+.wrapper .team h2 {
+    margin-bottom: 72px;
 }
 .wrapper .team ul {
     display: flex;
@@ -109,7 +128,15 @@ body {
                                     0px 1px 1px rgba(46, 47, 66, 16%),
                                     0px 2px 1px rgba(46, 47, 66,  8%);
 }
+.wrapper .team ul li:first-child {
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+.wrapper .team ul li .person {
+    padding: 32px 0;
+}
 .wrapper .team ul li h3 {
+    text-align: center;
     margin-top: 24px;
 }
 .wrapper .team ul li p {
@@ -121,19 +148,32 @@ body {
     flex-direction: column;
     gap: 72px;
 }
+.wrapper .portfolio h2 {
+    margin-bottom: 72px;
+}
 .wrapper .portfolio ul {
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 .wrapper .portfolio ul li h3 {
     margin-top: 27px;
     margin-left: 16px;
 }
+.wrapper .portfolio ul li:first-child {
+    width: calc((100% - 48px) / 3);
+}
 .wrapper .portfolio ul li p {
     margin-top: 8px;
     margin-bottom: 32px;
     margin-left: 16px;
+}
+.wrapper .portfolio ul li .app {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px
 }
 .logo {
     font-family: "Raleway", sans-serif;
@@ -228,12 +268,16 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 100px 156px;
+    padding: 100px 0;
     background-color: var(--dark);
 }
 .footer .footer-text {
     max-width: 264px;
     color: var(--light);
+}
+.footer .logo {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .footer .logo .logo-part {
     color: var(--light);
