--- a/css/styles.css
+++ b/css/styles.css
@@ -40,17 +40,20 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
+.header {
+    border-bottom: 1px solid var(--accent);
+}
 .header .header-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 24px;
-    border-bottom: 1px solid var(--accent);
+    width: 1158px;
+    padding: 0 15px;
     background-color: var(--white);
 }
 .header .header-list {
     display: flex;
+    align-items: center;
     gap: 76px;
 }
 .header .header-list .logo {
@@ -59,6 +62,9 @@ body {
 .header .header-list ul {
     display: flex;
     gap: 40px;
+}
+.header .header-list ul li {
+    padding: 24px 0;
 }
 .header .header-contacts ul{
     display: flex;
@@ -138,6 +144,7 @@ body {
 .wrapper .team ul li h3 {
     text-align: center;
     margin-top: 24px;
+    margin-bottom: 8px;
 }
 .wrapper .team ul li p {
     margin-top: 8px;
@@ -160,6 +167,7 @@ body {
 .wrapper .portfolio ul li h3 {
     margin-top: 27px;
     margin-left: 16px;
+    margin-bottom: 8px;
 }
 .wrapper .portfolio ul li:first-child {
     width: calc((100% - 48px) / 3);
