--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,11 @@ body {
 .visually-hidden {
     display: none;
     visibility: hidden;
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
 }
 .wrapper .solutions {
     display: flex;
