--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,17 @@ body {
     padding: 120px 0;
 }
 .visually-hidden {
+    position: absolute;
     width: 1px;
     height: 1px;
     margin: -1px;
-    visibility: hidden;
-    position: absolute;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .wrapper .solutions {
     display: flex;
