--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 :root {
 	--primary: #4d5ae5;
@@ -18,285 +20,374 @@
 	--modal: #fcfcfc;
 }
 ul li {
-    list-style-type: none;
+	list-style-type: none;
 }
 a {
-    text-decoration: none;
-}
-img {
-    display: block;
+	text-decoration: none;
 }
 button {
-    border: 0;
+	border: 0;
 }
 body {
-    font-family: "Roboto", sans-serif;
-    line-height: 1.333;
-    color: var(--text);
-    background: var(--white);
-}
-.container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+	font-family: "Roboto", sans-serif;
+	line-height: 1.333;
+	color: var(--text);
+	background: var(--white);
 }
 .header {
-    border-bottom: 1px solid var(--accent);
-}
-.header .header-block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1158px;
-    padding: 0 15px;
-    background-color: var(--white);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 24px 156px;
+	border-bottom: 1px solid var(--accent);
+	background-color: var(--white);
 }
 .header .header-list {
-    display: flex;
-    align-items: center;
-    gap: 76px;
-}
-.header .header-list .logo {
-    margin-right: 76px;
+	display: flex;
+	gap: 76px;
 }
 .header .header-list ul {
-    display: flex;
-    gap: 40px;
+	display: flex;
+	gap: 40px;
 }
-.header .header-list ul li a {
-    padding: 24px 0;
+.header .header-contacts {
+	display: block;
 }
-.header .header-contacts ul{
-    display: flex;
-    gap: 40px;
+.header .header-contacts ul {
+	display: flex;
+	gap: 40px;
 }
 .wrapper .section {
-    padding: 120px 0;
-}
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+	padding: 120px 156px;
 }
 .wrapper .solutions {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 48px;
-    padding: 188px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 48px;
+	background-image: linear-gradient(
+			rgba(46, 47, 66, 0.7),
+			rgba(46, 47, 66, 0.7)
+		),
+		url("../images/hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .wrapper .solutions .solutions-title {
-    margin-top: 69px;
-    max-width: 496px;
+	margin-top: 69px;
+	max-width: 496px;
 }
 .wrapper .solutions .btn {
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    cursor: pointer;
-    border-radius: 4px;
+	padding: 16px 32px;
+	border-radius: 4px;
+	margin-bottom: 69px;
 }
 .wrapper .skills ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-    gap: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	width: 100%;
+	gap: 24px;
 }
 .wrapper .skills ul li {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	max-width: 264px;
 }
-.wrapper .skills ul li:first-child {
-    width: calc((100% - 72px) / 4);
+.wrapper .skills ul li div.icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 24px 100px;
+	width: 100%;
+	border-radius: 4px;
+	border: 1px solid var(--subtle-text);
+	background-color: var(--light);
 }
-.wrapper .skills ul li h3 {
-    margin-bottom: 8px;
+.wrapper .skills ul li div.icon svg.icon {
+	width: 64px;
+	height: 64px;
+}
+.wrapper .skills h2 {
+	display: none;
 }
 .wrapper .team {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
-}
-.wrapper .team h2 {
-    margin-bottom: 72px;
+	display: flex;
+	flex-direction: column;
+	gap: 72px;
 }
 .wrapper .team ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	gap: 24px;
 }
 .wrapper .team ul li {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 8%),
-                                    0px 1px 1px rgba(46, 47, 66, 16%),
-                                    0px 2px 1px rgba(46, 47, 66,  8%);
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 8%),
+		0px 1px 1px rgba(46, 47, 66, 16%), 0px 2px 1px rgba(46, 47, 66, 8%);
 }
-.wrapper .team ul li:first-child {
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
+.wrapper .team ul li .icons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 24px;
+	padding-top: 8px;
+	padding-bottom: 32px;
 }
-.wrapper .team ul li .person {
-    padding: 32px 0;
+.wrapper .team ul li .icons a.icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: var(--primary);
+}
+.wrapper .team ul li:hover .icons a.icon {
+    background-color: var(--pressed);
 }
 .wrapper .team ul li h3 {
-    text-align: center;
-    margin-top: 24px;
-    margin-bottom: 8px;
+	margin-top: 24px;
 }
 .wrapper .team ul li p {
-    margin-top: 8px;
-    margin-bottom: 32px;
+	margin-top: 8px;
 }
 .wrapper .portfolio {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
-}
-.wrapper .portfolio h2 {
-    margin-bottom: 72px;
+	display: flex;
+	flex-direction: column;
+	gap: 72px;
 }
 .wrapper .portfolio ul {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 48px;
-    column-gap: 24px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 48px 24px;
+}
+.wrapper .portfolio ul li {
+	overflow: hidden;
+}
+.wrapper .portfolio ul li .text {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	z-index: 99;
+	background-color: var(--white);
+}
+.wrapper .portfolio ul li .image {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	background-color: var(--white);
+}
+.wrapper .portfolio ul li .cover {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateY(105%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+	background-color: var(--primary);
+}
+.wrapper .portfolio ul li:hover .cover {
+	transform: translateY(0);
+}
+.wrapper .portfolio ul li .cover p {
+	padding-left: 32px;
+	padding-right: 32px;
+	padding-top: 40px;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--light);
 }
 .wrapper .portfolio ul li h3 {
-    margin-top: 27px;
-    margin-left: 16px;
-    margin-bottom: 8px;
-}
-.wrapper .portfolio ul li:first-child {
-    width: calc((100% - 48px) / 3);
+	margin-top: 27px;
+	margin-left: 16px;
 }
 .wrapper .portfolio ul li p {
-    margin-top: 8px;
-    margin-bottom: 32px;
-    margin-left: 16px;
-}
-.wrapper .portfolio ul li .app {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-    margin-bottom: 8px
+	margin-top: 8px;
+	margin-bottom: 32px;
+	margin-left: 16px;
 }
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--primary);
+	font-family: "Raleway", sans-serif;
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 1.17;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: var(--primary);
 }
 .logo .logo-part {
-    color: var(--dark);
+	color: var(--dark);
 }
 nav ul li a {
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--dark);
+	position: relative;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--dark);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 address {
-    font-style: normal;
+	font-style: normal;
 }
 address ul li a {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--text);
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--text);
 }
 p {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    font-size: 16px;
-    color: var(--text);
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	font-size: 16px;
+	color: var(--text);
 }
 nav ul li a:hover,
 address ul li a:hover,
 nav ul li a:focus,
 address ul li a:focus {
-    color: var(--pressed);
+	color: var(--pressed);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-header ul li a:active, header ul li a:focus {
-    border-color: var(--pressed);
+nav ul li a::after {
+	display: block;
+	position: absolute;
+	opacity: 0;
+	content: "";
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	background-color: var(--pressed);
+	transform: translateY(-100%);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+nav ul li a.active {
+	color: var(--pressed);
+}
+nav ul li a.active::after,
+nav ul li a:hover::after,
+nav ul li a:focus::after {
+	opacity: 1;
+	transform: translateY(20px);
+}
+header ul li a:active,
+header ul li a:focus {
+	border-color: var(--pressed);
 }
 .btn {
-    font-weight: 500;
-    color: var(--white);
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    background-color: var(--primary);
+	font-weight: 500;
+	color: var(--white);
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: var(--primary);
 }
-.btn:hover, .btn:focus {
-    cursor: pointer;
-    background-color: var(--pressed);
+.btn:hover,
+.btn:focus {
+	cursor: pointer;
+	background-color: var(--pressed);
 }
 section {
-    background-color: var(--white);
+	background-color: var(--white);
 }
 .solutions {
-    background-color: var(--dark);
+	background-color: var(--dark);
 }
 h1 {
-    font-size: 56px;
-    font-weight: 700;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: var(--white);
+	font-size: 56px;
+	font-weight: 700;
+	line-height: 1.07;
+	letter-spacing: 0.02em;
+	text-align: center;
+	color: var(--white);
 }
 h2 {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
-    color: var(--dark);
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 1.11;
+	letter-spacing: 0.02em;
+	text-align: center;
+	text-transform: capitalize;
+	color: var(--dark);
 }
 h3 {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--dark);
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 1.2;
+	letter-spacing: 0.02em;
+	color: var(--dark);
 }
 .team {
-    background-color: var(--light);
+	background-color: var(--light);
 }
 .team ul li {
-    text-align: center;
-    background-color: var(--white);
+	text-align: center;
+	background-color: var(--white);
 }
 .footer {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    padding: 100px 0;
-    background-color: var(--dark);
+	display: flex;
+	width: 100%;
+	gap: 120px;
+	padding: 100px 156px;
+	background-color: var(--dark);
+}
+.footer .content {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+}
+.footer .socials {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+}
+.footer .socials p {
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.footer .socials .icons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 16px;
+}
+.footer .socials .icons a.icon:hover {
+    background-color: var(--success);
+}
+.footer .socials .icons a.icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: var(--primary);
+}
+.footer .socials .icons a.icon svg.icon {
+	width: 24px;
+	height: 24px;
 }
 .footer .footer-text {
-    max-width: 264px;
-    color: var(--light);
-}
-.footer .logo {
-    display: inline-block;
-    margin-bottom: 16px;
+	max-width: 264px;
+	color: var(--light);
 }
 .footer .logo .logo-part {
-    color: var(--light);
+	color: var(--light);
+}
+svg.icon {
+	width: 16px;
+	height: 16px;
+	fill: currentColor;
 }
