--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ body {
 	padding: 24px 156px;
 	border-bottom: 1px solid var(--accent);
 	background-color: var(--white);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .header-list {
 	display: flex;
