--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+    max-width: 1440px;
 	gap: 48px;
 	background-image: linear-gradient(
 			rgba(46, 47, 66, 0.7),
@@ -75,6 +76,8 @@ body {
 		url("../images/hero.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .solutions .solutions-title {
 	margin-top: 69px;
@@ -103,9 +106,10 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 24px 100px;
 	width: 100%;
+    height: 112px;
 	border-radius: 4px;
+    margin-bottom: 8px;
 	border: 1px solid var(--subtle-text);
 	background-color: var(--light);
 }
@@ -267,8 +271,8 @@ nav ul li a::after {
 	height: 4px;
 	border-radius: 2px;
 	background-color: var(--pressed);
-	transform: translateY(-100%);
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	bottom: -1px;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 nav ul li a.active {
 	color: var(--pressed);
@@ -277,7 +281,6 @@ nav ul li a.active::after,
 nav ul li a:hover::after,
 nav ul li a:focus::after {
 	opacity: 1;
-	transform: translateY(20px);
 }
 header ul li a:active,
 header ul li a:focus {
