--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ body {
 	display: flex;
 	gap: 40px;
 }
+.header .header-contacts ul li a {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .wrapper .section {
 	padding: 120px 156px;
 }
@@ -87,6 +90,7 @@ body {
 	padding: 16px 32px;
 	border-radius: 4px;
 	margin-bottom: 69px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .skills ul {
 	display: flex;
@@ -124,6 +128,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 72px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .wrapper .team ul {
 	display: flex;
@@ -133,8 +138,12 @@ body {
 	gap: 24px;
 }
 .wrapper .team ul li {
+    border-radius: 0px 0px 4px 4px;
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 8%),
 		0px 1px 1px rgba(46, 47, 66, 16%), 0px 2px 1px rgba(46, 47, 66, 8%);
+}
+.wrapper .team ul li .img {
+    padding: 32px 0;
 }
 .wrapper .team ul li .icons {
 	display: flex;
@@ -175,6 +184,7 @@ body {
 }
 .wrapper .portfolio ul li {
 	overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .portfolio ul li .text {
 	position: relative;
@@ -199,18 +209,23 @@ body {
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 	background-color: var(--primary);
 }
+.wrapper .portfolio ul li:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .wrapper .portfolio ul li:hover .cover {
 	transform: translateY(0);
 }
 .wrapper .portfolio ul li .cover p {
-	padding-left: 32px;
-	padding-right: 32px;
-	padding-top: 40px;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+	padding: 40px 32px;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--light);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .portfolio ul li h3 {
 	margin-top: 27px;
@@ -342,6 +357,10 @@ h3 {
 	gap: 120px;
 	padding: 100px 156px;
 	background-color: var(--dark);
+}
+.footer .container {
+    align-items: baseline;
+    margin-right: 120px
 }
 .footer .content {
 	display: flex;
