--- a/css/styles.css
+++ b/css/styles.css
@@ -117,10 +117,6 @@ body {
 	border: 1px solid var(--subtle-text);
 	background-color: var(--light);
 }
-.wrapper .skills ul li div.icon svg.icon {
-	width: 64px;
-	height: 64px;
-}
 .wrapper .skills h2 {
 	display: none;
 }
@@ -263,6 +259,7 @@ address ul li a {
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--text);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 p {
 	line-height: 1.5;
@@ -275,7 +272,6 @@ address ul li a:hover,
 nav ul li a:focus,
 address ul li a:focus {
 	color: var(--pressed);
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 nav ul li a::after {
 	display: block;
@@ -301,7 +297,7 @@ header ul li a:active,
 header ul li a:focus {
 	border-color: var(--pressed);
 }
-.btn {
+.wrapper .solutions .btn {
 	font-weight: 500;
 	color: var(--white);
 	line-height: 1.5;
