--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,11 @@ body {
 	border-radius: 4px;
 	margin-bottom: 69px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 500;
+	color: var(--white);
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	background-color: var(--primary);
 }
 .wrapper .skills ul {
 	display: flex;
@@ -138,7 +143,8 @@ body {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 8%),
 		0px 1px 1px rgba(46, 47, 66, 16%), 0px 2px 1px rgba(46, 47, 66, 8%);
 }
-.wrapper .team ul li .img {
+.wrapper .team ul li .img,
+.wrapper .team ul li .text{
     padding: 32px 0;
 }
 .wrapper .team ul li .icons {
@@ -149,12 +155,16 @@ body {
 	padding-top: 8px;
 	padding-bottom: 32px;
 }
+.wrapper .team ul li .icons li {
+    width: 40px;
+    height: 40px;
+}
 .wrapper .team ul li .icons a.icon {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 40px;
-	height: 40px;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--primary);
@@ -297,14 +307,6 @@ header ul li a:active,
 header ul li a:focus {
 	border-color: var(--pressed);
 }
-.wrapper .solutions .btn {
-	font-weight: 500;
-	color: var(--white);
-	line-height: 1.5;
-	letter-spacing: 0.04em;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	background-color: var(--primary);
-}
 .btn:hover,
 .btn:focus {
 	cursor: pointer;
@@ -355,13 +357,14 @@ h3 {
 	background-color: var(--dark);
 }
 .footer .container {
+    display: flex;
     align-items: baseline;
-    margin-right: 120px
 }
 .footer .content {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+    margin-right: 120px;
 }
 .footer .socials {
 	display: flex;
@@ -374,6 +377,7 @@ h3 {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 16px;
 }
 .footer .socials .icons {
 	display: flex;
@@ -381,7 +385,8 @@ h3 {
 	align-items: center;
 	gap: 16px;
 }
-.footer .socials .icons a.icon:hover {
+.footer .socials .icons a.icon:hover,
+.footer .socials .icons a.icon:active {
     background-color: var(--success);
 }
 .footer .socials .icons a.icon {
@@ -397,6 +402,7 @@ h3 {
 .footer .socials .icons a.icon svg.icon {
 	width: 24px;
 	height: 24px;
+    fill: var(--light); 
 }
 .footer .footer-text {
 	max-width: 264px;
