--- a/css/styles.css
+++ b/css/styles.css
@@ -86,17 +86,18 @@ body {
 	margin-top: 69px;
 	max-width: 496px;
 }
-.wrapper .solutions .btn,
-.wrapper .solutions .button {
+.wrapper .solutions .btn {
 	padding: 16px 32px;
 	border-radius: 4px;
 	margin-bottom: 69px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
 	color: var(--white);
 	line-height: 1.5;
 	letter-spacing: 0.04em;
 	background-color: var(--primary);
+}
+.wrapper .solutions .button {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .skills ul {
 	display: flex;
@@ -167,12 +168,18 @@ body {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
-    fill: var(--light);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--primary);
 }
+.wrapper .team ul li .icons a.icon svg.icon {
+    fill: var(--light);
+}
 .wrapper .team ul li:hover .icons a.icon,
 .wrapper .team ul li:focus .icons a.icon {
+    background-color: var(--pressed);
+}
+.wrapper .team ul li a:hover,
+.wrapper .team ul li a:focus {
     background-color: var(--pressed);
 }
 .wrapper .team ul li h3 {
@@ -224,10 +231,10 @@ body {
 .wrapper .portfolio ul li:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.wrapper .portfolio ul li:hover .cover {
-	transform: translateY(0);
+.wrapper .portfolio ul li:hover .image p {
+	transform: translateY(0%);
 }
-.wrapper .portfolio ul li .cover p {
+.wrapper .portfolio ul li .image p {
     width: 100%;
     height: 100%;
     transform: translateY(100%);
@@ -313,8 +320,8 @@ header ul li a:active,
 header ul li a:focus {
 	border-color: var(--pressed);
 }
-.btn:hover,
-.btn:focus {
+.wrapper .solutions .btn:hover,
+.wrapper .solutions .btn:focus {
 	cursor: pointer;
 	background-color: var(--pressed);
 }
