--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,8 @@ body {
 	padding: 24px 156px;
 	border-bottom: 1px solid var(--accent);
 	background-color: var(--white);
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+	box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .header-list {
 	display: flex;
@@ -60,7 +61,7 @@ body {
 	gap: 40px;
 }
 .header .header-contacts ul li a {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .section {
 	padding: 120px 156px;
@@ -70,17 +71,17 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-    max-width: 1440px;
+	max-width: 1440px;
 	gap: 48px;
 	background-image: linear-gradient(
 			rgba(46, 47, 66, 0.7),
 			rgba(46, 47, 66, 0.7)
 		),
 		url("../images/hero.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .solutions .solutions-title {
 	margin-top: 69px;
@@ -90,14 +91,14 @@ body {
 	padding: 16px 32px;
 	border-radius: 4px;
 	margin-bottom: 69px;
-    font-weight: 500;
+	font-weight: 500;
 	color: var(--white);
 	line-height: 1.5;
 	letter-spacing: 0.04em;
 	background-color: var(--primary);
 }
 .wrapper .solutions .button {
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .skills ul {
 	display: flex;
@@ -118,9 +119,9 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-    height: 112px;
+	height: 112px;
 	border-radius: 4px;
-    margin-bottom: 8px;
+	margin-bottom: 8px;
 	border: 1px solid var(--subtle-text);
 	background-color: var(--light);
 }
@@ -131,7 +132,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 72px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .wrapper .team ul {
 	display: flex;
@@ -141,13 +143,13 @@ body {
 	gap: 24px;
 }
 .wrapper .team ul li {
-    border-radius: 0px 0px 4px 4px;
+	border-radius: 0px 0px 4px 4px;
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 8%),
 		0px 1px 1px rgba(46, 47, 66, 16%), 0px 2px 1px rgba(46, 47, 66, 8%);
 }
 .wrapper .team ul li .img,
-.wrapper .team ul li .text{
-    padding: 32px 0;
+.wrapper .team ul li .text {
+	padding: 32px 0;
 }
 .wrapper .team ul li .icons {
 	display: flex;
@@ -158,8 +160,8 @@ body {
 	padding-bottom: 32px;
 }
 .wrapper .team ul li .icons li {
-    width: 40px;
-    height: 40px;
+	width: 40px;
+	height: 40px;
 }
 .wrapper .team ul li .icons a.icon {
 	display: flex;
@@ -168,19 +170,19 @@ body {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--primary);
 }
 .wrapper .team ul li .icons a.icon svg.icon {
-    fill: var(--light);
+	fill: var(--light);
 }
 .wrapper .team ul li:hover .icons a.icon,
-.wrapper .team ul li:focus .icons a.icon {
-    background-color: var(--pressed);
+.wrapper .team ul li:active .icons a.icon {
+	background-color: var(--pressed);
 }
 .wrapper .team ul li a:hover,
 .wrapper .team ul li a:focus {
-    background-color: var(--pressed);
+	background-color: var(--pressed);
 }
 .wrapper .team ul li h3 {
 	margin-top: 24px;
@@ -200,10 +202,11 @@ body {
 }
 .wrapper .portfolio ul li {
 	overflow: hidden;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .portfolio ul li:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .wrapper .portfolio ul li .text {
 	position: relative;
@@ -229,22 +232,29 @@ body {
 	background-color: var(--primary);
 }
 .wrapper .portfolio ul li:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .wrapper .portfolio ul li:hover .image p {
 	transform: translateY(0%);
 }
+button {
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .wrapper .portfolio ul li .image p {
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
+    position: absolute;
+    top: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateY(100%);
 	padding: 40px 32px;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--light);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background: var(--primary);
 }
 .wrapper .portfolio ul li h3 {
 	margin-top: 27px;
@@ -282,7 +292,7 @@ address ul li a {
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--text);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 p {
 	line-height: 1.5;
@@ -370,14 +380,14 @@ h3 {
 	background-color: var(--dark);
 }
 .footer .container {
-    display: flex;
-    align-items: baseline;
+	display: flex;
+	align-items: baseline;
 }
 .footer .content {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-    margin-right: 120px;
+	margin-right: 120px;
 }
 .footer .socials {
 	display: flex;
@@ -385,12 +395,12 @@ h3 {
 	gap: 16px;
 }
 .footer .socials p {
-    color: var(--white);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
+	color: var(--white);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	margin-bottom: 16px;
 }
 .footer .socials .icons {
 	display: flex;
@@ -401,7 +411,7 @@ h3 {
 .footer .socials .icons a.icon:hover,
 .footer .socials .icons a.icon:active,
 .footer .socials .icons a.icon:focus {
-    background-color: var(--success);
+	background-color: var(--success);
 }
 .footer .socials .icons a.icon {
 	display: flex;
@@ -410,13 +420,13 @@ h3 {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--primary);
 }
 .footer .socials .icons a.icon svg.icon {
 	width: 24px;
 	height: 24px;
-    fill: var(--light); 
+	fill: var(--light);
 }
 .footer .footer-text {
 	max-width: 264px;
