--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ body {
 	line-height: 1.5;
 	letter-spacing: 0.04em;
 	background-color: var(--primary);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .solutions .button {
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
