--- a/css/styles.css
+++ b/css/styles.css
@@ -175,11 +175,13 @@ body {
 	fill: var(--light);
 }
 .wrapper .team ul li:hover .icons a.icon,
+.wrapper .team ul li:focus .icons a.icon,
 .wrapper .team ul li:active .icons a.icon {
 	background-color: var(--pressed);
 }
 .wrapper .team ul li a:hover,
-.wrapper .team ul li a:active {
+.wrapper .team ul li a:active,
+.wrapper .team ul li a:focus {
 	background-color: var(--pressed);
 }
 .wrapper .team ul li h3 {
@@ -235,9 +237,6 @@ body {
 }
 .wrapper .portfolio ul li:hover .image p {
 	transform: translateY(0%);
-}
-button {
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapper .portfolio ul li .image p {
     position: absolute;
