--- a/css/styles.css
+++ b/css/styles.css
@@ -180,8 +180,8 @@ body {
 	background-color: var(--pressed);
 }
 .wrapper .team ul li a:hover,
-.wrapper .team ul li a:active,
-.wrapper .team ul li a:focus {
+.wrapper .team ul li a:focus,
+.wrapper .team ul li a:active {
 	background-color: var(--pressed);
 }
 .wrapper .team ul li h3 {
@@ -331,6 +331,7 @@ header ul li a:focus {
 .wrapper .solutions .btn:focus {
 	cursor: pointer;
 	background-color: var(--pressed);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 section {
 	background-color: var(--white);
