--- a/css/styles.css
+++ b/css/styles.css
@@ -402,11 +402,13 @@ h3 {
 	letter-spacing: 0.02em;
 	margin-bottom: 16px;
 }
-
 .footer .subscribe {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+}
+.footer .subscribe svg {
+	margin-left: 16px;
 }
 .footer .subscribe p {
 	color: var(--white);
@@ -669,7 +671,12 @@ svg.icon {
 	background-color: var(--accent);
 }
 
+.modal-overlay .close svg {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-overlay .close:hover,
+.modal-overlay .close:focus,
 .modal-overlay .close:active {
 	cursor: pointer;
 	fill: var(--white);
